RSV-02: Added lat, long idealista.

--- a/src/com/carlossamartin/realstatevaluation/view/RealStateOverview.fxml
+++ b/src/com/carlossamartin/realstatevaluation/view/RealStateOverview.fxml
@@ -50,10 +50,10 @@
                       <TableColumn fx:id="priceColumn" prefWidth="75.0" text="Price" />
                         <TableColumn fx:id="sizeColumn" prefWidth="75.0" text="Size" />
                         <TableColumn fx:id="priceSizeColumn" prefWidth="75.0" text="Price / Size" />
-                        <TableColumn prefWidth="200.0" text="Agency">
+                        <TableColumn prefWidth="100.0" text="Agency">
                            <columns>
-                              <TableColumn fx:id="agencyColumn" prefWidth="100.0" text="Agency" />
-                               <TableColumn fx:id="factorColumn" prefWidth="100.0" text="Factor">
+                              <TableColumn fx:id="agencyColumn" prefWidth="50.0" text="Agency" />
+                               <TableColumn fx:id="factorColumn" prefWidth="50.0" text="Factor">
                                    <cellValueFactory>
                                        <PropertyValueFactory property="factor" />
                                    </cellValueFactory>
@@ -61,6 +61,12 @@
                            </columns>
                         </TableColumn>
                         <TableColumn fx:id="addressColumn" prefWidth="300.0" text="Address" />
+                        <TableColumn prefWidth="200.0" text="Coordenates">
+                           <columns>
+                              <TableColumn fx:id="latitudeColumn" prefWidth="75.0" text="Lat" />
+                              <TableColumn fx:id="longitudeColumn" prefWidth="75.0" text="Long" />
+                           </columns>
+                        </TableColumn>
                         <TableColumn fx:id="urlColumn" prefWidth="300.0" text="Url" />
                     </columns>
                   </TableView>
