RSV-05.Added setting. Incompleted

--- a/src/com/carlossamartin/realstatevaluation/view/RootLayout.fxml
+++ b/src/com/carlossamartin/realstatevaluation/view/RootLayout.fxml
@@ -13,6 +13,7 @@
           <Menu mnemonicParsing="false" text="File">
             <items>
                   <MenuItem mnemonicParsing="false" onAction="#handleNew" text="New" />
+                  <MenuItem mnemonicParsing="false" onAction="#handleSettings" text="Preferences" />
               <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Close" />
             </items>
           </Menu>
