--- a/src/com/carlossamartin/realstatevaluation/view/RealStateOverview.fxml
+++ b/src/com/carlossamartin/realstatevaluation/view/RealStateOverview.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="500.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.carlossamartin.realstatevaluation.view.RealStateOverviewController">
+<AnchorPane prefHeight="500.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.carlossamartin.realstatevaluation.controller.RealStateOverviewController">
    <children>
       <SplitPane dividerPositions="0.12650602409638553" layoutY="1.0" orientation="VERTICAL" prefHeight="500.0" prefWidth="808.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
