--- a/src/com/carlossamartin/realstatevaluation/view/RealStateOverview.fxml
+++ b/src/com/carlossamartin/realstatevaluation/view/RealStateOverview.fxml
@@ -9,28 +9,55 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane prefHeight="500.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.carlossamartin.realstatevaluation.controller.RealStateOverviewController">
    <children>
-      <SplitPane dividerPositions="0.12650602409638553" layoutY="1.0" orientation="VERTICAL" prefHeight="500.0" prefWidth="808.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <SplitPane dividerPositions="0.1606425702811245" layoutY="1.0" orientation="VERTICAL" prefHeight="500.0" prefWidth="808.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+          <AnchorPane maxHeight="100.0" minHeight="80.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <HBox alignment="CENTER" layoutX="61.0" layoutY="18.0" prefHeight="25.0" prefWidth="980.0" spacing="5.0" AnchorPane.leftAnchor="15.0">
+                  <GridPane alignment="CENTER" hgap="5.0" layoutX="89.0" layoutY="18.0" prefHeight="77.0" prefWidth="906.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="89.0" AnchorPane.topAnchor="0.0">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="169.0" minWidth="0.0" prefWidth="33.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="449.0" minWidth="10.0" prefWidth="216.0" />
+                        <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="361.0" minWidth="10.0" prefWidth="63.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="520.0" minWidth="10.0" prefWidth="520.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
                      <children>
                         <Label alignment="TOP_LEFT" text="Address" />
-                        <TextField fx:id="searchField" prefHeight="25.0" prefWidth="303.0" />
-                        <Button fx:id="searchButton" mnemonicParsing="false" onAction="#handleSearch" text="Search" />
-                        <Label fx:id="formattedAddress" prefHeight="17.0" prefWidth="482.0">
+                        <TextField fx:id="searchField" prefHeight="25.0" prefWidth="303.0" GridPane.columnIndex="1" />
+                        <Button fx:id="searchButton" alignment="CENTER" mnemonicParsing="false" onAction="#handleSearch" text="Search" GridPane.columnIndex="2">
+                           <GridPane.margin>
+                              <Insets left="10.0" />
+                           </GridPane.margin>
+                        </Button>
+                        <Label fx:id="formattedAddress" prefHeight="17.0" prefWidth="522.0" GridPane.columnIndex="3">
                            <padding>
                               <Insets left="15.0" />
                            </padding>
                         </Label>
+                        <Label alignment="TOP_LEFT" text="Size" GridPane.rowIndex="1" />
+                        <TextField fx:id="sizeField" prefHeight="25.0" prefWidth="121.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label text="m2" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="10.0" />
+                           </GridPane.margin>
+                        </Label>
                      </children>
-                  </HBox>
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </GridPane>
                   <HBox alignment="CENTER" layoutX="1058.0" layoutY="18.0" spacing="5.0" AnchorPane.rightAnchor="15.0">
                      <children>
                         <Label text="Distance" />
